# ludlc

./: .clang-format  CMakeLists.txt  LICENSE  OWNERS  README.md  VERSION
doc/: CMakeLists.txt  ludlc.md
src/: CMakeLists.txt
src/include/: ludlc.h  ludlc_proto.h  ludlc_serial.h  ludlc_types.h
src/lib/: CMakeLists.txt  ludlc.c  ludlc_serial.c
src/lib/include/: ludlc_packet.h  ludlc_platform_api.h  ludlc_private.h  ludlc_serial_enc_impl.h
src/lib/platform/: CMakeLists.txt
src/lib/platform/posix/: CMakeLists.txt  config.h.in  kfifo.h  log.c  log.h  ludlc_hardware.h  ludlc_logger.h  ludlc_platform.h  ludlc_platform_args.h  ludlc_platform_config.h  ludlc_posix.c  ludlc_posix.h  ludlc_posix_platform.c  ludlc_posix_serial.c  ludlc_serial.c
src/lib/platform/zephyr/: CMakeLists.txt  ludlc_logger.h  ludlc_platform.h  ludlc_platform_args.h  ludlc_zephyr_platform.c  ludlc_zephyr_serial.c
src/samples/: CMakeLists.txt  ludlc_demo.c
src/samples/zephyr/: CMakeLists.txt
src/samples/zephyr/ludlc_echo/: CMakeLists.txt  Kconfig  Kconfig.sample  README.rst  ludlc_echo.c  prj.conf  sample.yaml
src/samples/zephyr/ludlc_echo/boards/: native_sim.overlay
zephyr/: Kconfig  module.yml
